[tool.poetry]
name = "emacs-jedi-hack"
version = "0.1.0"
description = ""
authors = ["Mehmet Fatih Aktas <mfatihaktas@gmail.com>"]
readme = "README.md"
packages = [{include = "emacs_jedi_hack"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
