[tool.poetry]
name = "emacs-jedi-hack"
version = "0.1.0"
description = ""
authors = ["Mehmet Fatih Aktas <mfatihaktas@gmail.com>"]
readme = "README.md"
packages = [{include = "emacs_jedi_hack"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.143"
jedi = "^0.18.2"
virtualenv = "^20.23.0"
pyiceberg = "^0.3.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
tox = "<4"
sqlalchemy = "^2.0.17"
ibis = "^3.2.0"
ibis-framework = {extras = ["duckdb"], version = "^5.1.0"}
pytest = "^7.4.0"
fastapi = "^0.98.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
